--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,7 @@ else()
 	SET(ZED_LIBS ${ZED_STATIC_LIBRARIES} ${CUDA_CUDA_LIBRARY} ${CUDA_LIBRARY})
 endif()
 
-SET(TRT_LIBS nvinfer)
+SET(TRT_LIBS nvinfer nvonnxparser)
 
 TARGET_LINK_LIBRARIES(
 	${PROJECT_NAME}
