Added zmq and flatbufferes, kind of dont like how I'm publishing based on fb, but works for no

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,11 +20,35 @@ else()
 endif()
 message(STATUS "Using Log level ${LOG_LEVEL}")
 
+set(FLATBUFFERS_FLATC_EXECUTABLE flatc)
+set(FBS_SCHEMA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/fb_schemas) 
+set(FBS_GENERATED_DIR ${CMAKE_CURRENT_BINARY_DIR}/generated_fbs) 
+
+file(GLOB_RECURSE FBS_FILES ${FBS_SCHEMA_DIR}/*.fbs) 
+file(MAKE_DIRECTORY ${FBS_GENERATED_DIR})
+
+foreach(FBS_FILE ${FBS_FILES})
+    get_filename_component(FBS_NAME ${FBS_FILE} NAME_WE)
+    set(GENERATED_FBS_SRC ${FBS_GENERATED_DIR}/${FBS_NAME}_generated.h)
+
+    add_custom_command(
+        OUTPUT ${GENERATED_FBS_SRC}
+        COMMAND ${CMAKE_COMMAND} -E echo "Running flatc on ${FBS_FILE}"
+        COMMAND ${FLATBUFFERS_FLATC_EXECUTABLE} -c -o ${FBS_GENERATED_DIR} ${FBS_FILE}
+        DEPENDS ${FBS_FILE}
+        COMMENT "Compiling ${FBS_FILE} to ${GENERATED_FBS_SRC}"
+    )
+    list(APPEND GENERATED_FBS_SRCS ${GENERATED_FBS_SRC})
+endforeach()
+
+add_custom_target(GenerateFlatBuffers DEPENDS ${GENERATED_FBS_SRCS})
+
 find_package(OpenCV REQUIRED)
 message(STATUS "OpenCV include dir: ${OpenCV_INCLUDE_DIRS}")
 # Defualt to ONNXRuntime CPU and use CUDA later if available
 find_package(onnxruntime CONFIG REQUIRED)
-# message(STATUS "ONNXRuntime include dir: ${onnxruntime_INCLUDE_DIRS}")
+find_package(flatbuffers REQUIRED)
+find_package(ZeroMQ REQUIRED)
 
 if(APPLE)
     message(STATUS "Configuring for MacBook")
@@ -51,8 +75,11 @@ elseif(UNIX AND NOT APPLE)
 endif()
 
 include_directories(
+    ${FBS_GENERATED_DIR}
     ${OpenCV_INCLUDE_DIRS}
-    ${onnxruntime_INCLUDE_DIRS}
+    ${ONNXRuntime_INCLUDE_DIRS}
+    ${flatbuffers_INCLUDE_DIR}
+    ${ZeroMQ_INCLUDE_DIRS}
     ${PROJECT_SOURCE_DIR}/include
 )
 
@@ -63,10 +90,13 @@ link_directories(
 file(GLOB_RECURSE SRC_FILES src/*.cpp)
 file(GLOB_RECURSE HDR_FILES include/*.h include/*.hpp)
 
-add_executable(${PROJECT_NAME} ${SRC_FILES})
+add_executable(${PROJECT_NAME} ${SRC_FILES} ${GENERATED_FBS_SRCS})
+add_dependencies(${PROJECT_NAME} GenerateFlatBuffers)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
     ${OpenCV_LIBRARIES}
+    ${ZeroMQ_LIBRARY}
+    flatbuffers::flatbuffers
     onnxruntime::onnxruntime
 )
 
