Add github actions and docker image for linux building

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,18 +56,15 @@ if(APPLE)
 elseif(UNIX AND NOT APPLE)
     message(STATUS "Configuring for Linux")
     
-    # Check for CUDA using the language support
-    enable_language(CUDA)
-    find_package(CUDA)
-    if(CUDA_FOUND)
+    find_package(CUDAToolkit)
+    if(CUDAToolkit_FOUND)
+        enable_language(CUDA) 
         add_definitions(-DLINUX_WITH_CUDA)
         message(STATUS "CUDA found: Compiling for Linux with GPU support")
         
         find_package(ZED 4 REQUIRED)
-        include_directories(${ZED_INCLUDE_DIRS})
-        include_directories(${CUDA_INCLUDE_DIRS})
-        link_directories(${ZED_LIBRARY_DIR})
-        link_directories(${CUDA_LIBRARY_DIRS})
+        include_directories(${CUDAToolkit_INCLUDE_DIRS})
+        link_directories(${CUDAToolkit_LIBRARY_DIR})
     else()
         add_definitions(-DLINUX_WITHOUT_CUDA)
         message(STATUS "No CUDA found: Compiling for Linux without GPU support")
