--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ foreach(FBS_FILE ${FBS_FILES})
         COMMAND ${CMAKE_COMMAND} -E echo "Running flatc on ${FBS_FILE}"
         COMMAND ${FLATBUFFERS_FLATC_EXECUTABLE} -c -o ${FBS_GENERATED_DIR} ${FBS_FILE}
         COMMAND ${FLATBUFFERS_FLATC_EXECUTABLE} --java -o ${FBS_GENERATED_DIR} ${FBS_FILE}
+        COMMAND ${FLATBUFFERS_FLATC_EXECUTABLE} --python -o ${FBS_GENERATED_DIR} ${FBS_FILE}
         DEPENDS ${FBS_FILE}
         COMMENT "Compiling ${FBS_FILE} to ${GENERATED_FBS_SRC}"
     )
