--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,21 +1,19 @@
-cmake_miniumum_version(VERSION 3.5)
+cmake_minimum_required(VERSION 3.10)
 
 project(VisionSystemTests)
 
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  # Specify the commit you depend on and update it regularly.
-  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
-)
-# For Windows: Prevent overriding the parent project's compiler/linker settings
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-find_package(GTest REQUIRED)
-
-include_directories(${GTEST_INCLUDE_DIRS})
-
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+add_executable(common_tests
+  ../common/tests/logger_test.cpp
+)
+
+target_link_libraries(common_tests PRIVATE
+  logger
+  gtest_main
+  gmock_main
+)
+
+include(GoogleTest)
+gtest_discover_tests(common_tests)
