--- a/.bazelrc
+++ b/.bazelrc
@@ -1,7 +1,7 @@
 common --enable_bzlmod
 
-build:unix --cxxopt=-std=c++17
-build:unix --host_cxxopt=-std=c++17
+build:linux --cxxopt=-std=c++17
+build:linux --host_cxxopt=-std=c++17
 
 build:windows --cxxopt=/std:c++17
 build:windows --host_cxxopt=/std:c++17
