--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,42 +1,24 @@
-name: Linux Build
+name: Build And Test
 
 on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, windows-latest]
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
+      uses: bazelbuild/setup-bazelisk@v3
 
-    - name: Install Dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y build-essential cmake git curl
+    - name: Mount bazel cache  # Optional
+      uses: actions/cache@v4
+      with:
+        path: "~/.cache/bazel"
+        key: bazel
 
-    - name: Install Project Dependencies
-      run: |
-        chmod +x ./scripts/*.sh
-        sudo ./scripts/install_opencv.sh
-        sudo ./scripts/install_onnxruntime.sh
-        sudo ./scripts/install_zmq.sh
-        sudo ./scripts/install_flatbuffers.sh
-        sudo ./scripts/install_cppzmq.sh
+    - name: Build Project
+      run: bazel build //...
 
-    - name: Copy Project Files
-      run: |
-        mkdir project
-        cp CMakeLists.txt project/
-        cp -R include/ project/include/
-        cp -R src/ project/src/
-        cp -R tests/ project/tests/
-        cp -R fb_schemas/ project/fb_schemas/
-
-    - name: Build the Project
-      run: |
-        mkdir project/build
-        cd project/build
-        cmake ..
-        make
-
+    - name: Run Tests
+      run: bazel test //...
