--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,13 +9,13 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
-      uses: bazelbuild/setup-bazelisk@v3
 
-    - name: Mount bazel cache  # Optional
-      uses: actions/cache@v4
+    - name: Setup Bazel
+    - uses: bazel-contrib/setup-bazel@0.8.5
       with:
-        path: "~/.cache/bazel"
-        key: bazel
+        bazelisk-cache: true
+        disk-cache: ${{ github.workflow }}
+        repository-cache: true
 
     - name: Build Project
       run: bazel build //...
