--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup Bazel
-    - uses: bazel-contrib/setup-bazel@0.8.5
+      uses: bazel-contrib/setup-bazel@0.8.5
       with:
         bazelisk-cache: true
         disk-cache: ${{ github.workflow }}
