--- a/common/zmq_networking/BUILD
+++ b/common/zmq_networking/BUILD
@@ -4,6 +4,15 @@ cc_library(
     visibility = ["//visibility:public"],
     deps = [
         "@libzmq//:libzmq",
-        "@flatbuffers//:flatbuffers",
+    ],
+)
+
+cc_test(
+    name = "zmq_publisher_test",
+    srcs = ["zmq_publisher_test.cc"],
+    deps = [
+        ":zmq_networking",
+        "@googletest//:gtest",
+        "@googletest//:gtest_main",
     ],
 )
