clang should work now

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,12 +1,10 @@
 include(FetchContent)
 
-function(set_target_warnings target_name)
-  if(MSVC)
-    target_compile_options(${target_name} PRIVATE /W4 /WX)
-  else()
-    target_compile_options(${target_name} PRIVATE -Wall -Wextra -pedantic -Werror)
-  endif()
-endfunction()
+FetchContent_Declare(
+  libzmq
+  GIT_REPOSITORY https://github.com/zeromq/libzmq.git
+  GIT_TAG v4.3.5
+)
 
 set(ZMQ_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(WITH_PERF_TOOL OFF CACHE BOOL "" FORCE)
@@ -14,44 +12,25 @@ set(ENABLE_CPACK OFF CACHE BOOL "" FORCE)
 set(BUILD_SHARED OFF CACHE BOOL "" FORCE)
 set(BUILD_STATIC ON CACHE BOOL "" FORCE)
 
-# Set ZMQ compile options before fetching
-set(SAVED_CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
-if(NOT MSVC)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w")
-endif()
-
-FetchContent_Declare(
-  libzmq
-  GIT_REPOSITORY https://github.com/zeromq/libzmq.git
-  GIT_TAG v4.3.5
-)
-
 # Override libzmq cmake
 function(cmake_minimum_required)
 endfunction()
 
 FetchContent_MakeAvailable(libzmq)
-
-# Restore original flags
-set(CMAKE_CXX_FLAGS ${SAVED_CMAKE_CXX_FLAGS})
-
 # Go back to default
 macro(cmake_minimum_required)
   _cmake_minimum_required(${ARGN})
 endmacro()
 
 if(TARGET libzmq-static)
-  if(MSVC)
-    target_compile_options(libzmq-static PRIVATE /W0)
-  else()
-    target_compile_options(libzmq-static PRIVATE 
-      -w 
-      -Wno-everything
-    )
-  endif()
-  set_target_properties(libzmq-static PROPERTIES COMPILE_DEFINITIONS "ZMQ_STATIC")
-  # Create an alias target named 'libzmq' for compatibility
-  add_library(libzmq ALIAS libzmq-static)
+    if(MSVC)
+        target_compile_options(libzmq-static PRIVATE /W0)
+    else()
+        target_compile_options(libzmq-static PRIVATE -w)
+    endif()
+    set_target_properties(libzmq-static PROPERTIES COMPILE_DEFINITIONS "ZMQ_STATIC")
+    # alias libzmq for compatibility
+    add_library(libzmq ALIAS libzmq-static)
 endif()
 
 FetchContent_Declare(
@@ -77,3 +56,5 @@ target_include_directories(common_lib PUBLIC ${flatbuffers_SOURCE_DIR}/include)
 
 add_library(logger INTERFACE)
 target_include_directories(logger INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+set_target_warnings(common_lib)
