make sure to cache based on compiler. Need to figure out why macos test is failing for threads, assuming its a resource thing for runners

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -51,9 +51,10 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ${{ steps.strings.outputs.deps-cache-dir }}
-        key: deps-cache-${{ runner.os }}-${{ hashFiles('CMakeLists.txt') }}
+        key: ${{ runner.os }}-${{ matrix.c_compiler }}-${{ hashFiles('**/CMakeLists.txt') }}
         restore-keys: |
-          deps-cache-${{ runner.os }}-
+          ${{ runner.os }}-${{ matrix.c_compiler }}-
+          ${{ runner.os }}-
 
     - name: Configure CMake
       run: >
