--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -22,7 +22,7 @@ jobs:
           - os: ubuntu-latest
             c_compiler: clang
             cpp_compiler: clang++
-          - os: macos-latest
+          - os: macos-13
             c_compiler: clang
             cpp_compiler: clang++
         exclude:
@@ -32,9 +32,9 @@ jobs:
             c_compiler: clang
           - os: ubuntu-latest
             c_compiler: cl
-          - os: macos-latest
+          - os: macos-13
             c_compiler: gcc
-          - os: macos-latest
+          - os: macos-13
             c_compiler: cl
 
     steps:
