--- a/common/tests/CMakeLists.txt
+++ b/common/tests/CMakeLists.txt
@@ -1,12 +1,18 @@
 project(common_tests)
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+include(CUDAConfig)
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 
 add_executable(common_tests
   logger_test.cc
   task_test.cc
   zmq_tests.cc
+  allocator_test.cc
+  device_tests.cc
 )
 
 target_link_libraries(common_tests
@@ -33,3 +39,4 @@ endif()
 
 include(GoogleTest)
 gtest_discover_tests(common_tests)
+enable_cuda_for_target(common_tests)
