--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,16 @@ if (NOT CMAKE_EXPORT_COMPILE_COMMANDS)
   set(CMAKE_EXPORT_COMPILE_COMMANDS "YES" CACHE BOOL "" FORCE)
 endif()
 
+function(enable_cuda_for_target target)
+    if(CUDA_AVAILABLE)
+        set_target_properties(${target} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+        target_compile_definitions(${target} PRIVATE CUDA)
+        set_target_properties(${target} PROPERTIES CUDA_ARCHITECTURES ${CMAKE_CUDA_ARCHITECTURES})
+    else()
+        message(WARNING "CUDA not available, skipping CUDA setup for target ${target}")
+    endif()
+endfunction()
+
 if (WIN32)
   set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
 endif()
