--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -6,9 +6,7 @@ module(
 bazel_dep(name = "googletest", version = "1.15.2")
 bazel_dep(name = "flatbuffers", version = "24.3.25")
 bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
-bazel_dep(name = "rules_cc", version = "0.0.10")
-bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
-bazel_dep(name = "libzmq", version = "4.3.5")
+bazel_dep(name = "rules_python", version = "0.38.0")
 
 git_override(
     module_name = "hedron_compile_commands",
