--- a/.bazelrc
+++ b/.bazelrc
@@ -6,6 +6,9 @@ build:linux --host_cxxopt=-std=c++17
 build:windows --cxxopt=/std:c++17
 build:windows --host_cxxopt=/std:c++17
 
+build:macos --cxxopt=-std=c++17
+build:macos --host_cxxopt=-std=c++17
+
 build --enable_platform_specific_config
 build --host_platform=@local_config_platform//:host
 
