cuda with bazel working on windows

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -13,3 +13,11 @@ git_override(
     remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
     commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
 )
+
+bazel_dep(name = "rules_cuda", version = "0.2.3")
+cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
+cuda.local_toolchain(
+    name = "local_cuda",
+    toolkit_path = "",
+)
+use_repo(cuda, "local_cuda")
