--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ function(set_target_warnings target_name)
     endif()
 endfunction()
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Set the defualt to release with debug info (relase mode with optimization but still have debug info)
@@ -22,15 +22,16 @@ if (NOT CMAKE_EXPORT_COMPILE_COMMANDS)
   set(CMAKE_EXPORT_COMPILE_COMMANDS "YES" CACHE BOOL "" FORCE)
 endif()
 
-function(enable_cuda_for_target target)
-    if(CUDA_AVAILABLE)
-        set_target_properties(${target} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-        target_compile_definitions(${target} PRIVATE CUDA)
-        set_target_properties(${target} PROPERTIES CUDA_ARCHITECTURES ${CMAKE_CUDA_ARCHITECTURES})
-    else()
-        message(WARNING "CUDA not available, skipping CUDA setup for target ${target}")
-    endif()
-endfunction()
+# function(enable_cuda_for_target target)
+#     if(CUDA_AVAILABLE)
+#         message("Setting up CUDA")
+#         set_target_properties(${target} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+#         target_compile_definitions(${target} PRIVATE CUDA)
+#         set_target_properties(${target} PROPERTIES CUDA_ARCHITECTURES ${CMAKE_CUDA_ARCHITECTURES})
+#     else()
+#         message(WARNING "CUDA not available, skipping CUDA setup for target ${target}")
+#     endif()
+# endfunction()
 
 if (WIN32)
   set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
@@ -49,7 +50,7 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
 add_subdirectory(common)
-# add_subdirectory(vision-system)
+add_subdirectory(vision-system)
 # add_subdirectory(vision-client)
 # add_subdirectory(vision-communication)
 
